# legal-ai

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_HFSPACE.md  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml  requirements-hfspace.txt  targets.json  todo.md
.github/instructions/: .instructions.md
.github/workflows/: ci.yml
docs/: EVALUATION.md
evals/: README.md  ragas_eval_dataset.csv  summary.json
evals/results/: results.csv  results_emb=bge-m3_gen=gemma2-9b_hyde=False_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=gemma2-9b_hyde=False_rerank=True_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=gemma2-9b_hyde=True_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=gemma2-9b_hyde=True_rerank=True_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=mistral-7b_hyde=False_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=mistral-7b_hyde=False_rerank=True_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=mistral-7b_hyde=True_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=mistral-7b_hyde=True_rerank=True_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=qwen2.5-7b_hyde=False_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=qwen2.5-7b_hyde=False_rerank=True_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=qwen2.5-7b_hyde=True_rerank=False_contextualize=False_threshold=0.5.csv  results_emb=bge-m3_gen=qwen2.5-7b_hyde=True_rerank=True_contextualize=False_threshold=0.5.csv  results_hyde=False_rerank=False_contextualize=False_threshold=0.5.csv  results_hyde=False_rerank=False_threshold=0.5.csv  results_hyde=False_rerank=True_contextualize=False_threshold=0.5.csv  results_hyde=True_rerank=False_contextualize=False_threshold=0.5.csv  results_hyde=True_rerank=True_contextualize=False_threshold=0.5.csv
frontend/: README.md  requirements.txt  streamlit_app.py
presentation/: build_deck.py  generate_figures.py  script_soutenance.md  soutenance.pptx  ~$soutenance.pptx
scripts/: dump_for_demo.sh
sql/: 1771094393_add_unique_constraint_on_number.sql  1771269563_update_content_field.sql  1771343152_add_official_date_field.sql  1771346878_add_text_content_column.sql  1771409690_add_unique_constraint_on_fk.sql  1771424602_add_document_chunks_table.sql  1771500032_add_metadata_column.sql  1771595532_resize_embedding_to_1024.sql  fix_rename_content_column.sql  init.sql
src/legal_ai/: adapters.py  constants.py  database.py  downloader.py  interfaces.py  logging_config.py  main.py  processors.py  settings.py  splitters.py  utils.py
src/legal_ai/api/: main.py  schemas.py
src/legal_ai/crawlers/: local_files_crawler.py  sgg_crawler.py  sgg_heading_rules.py
src/legal_ai/evaluation/: qa_generator.py  ragas.py  runner.py  schemas.py  utils.py
src/legal_ai/ingestion/: crawler.py
src/legal_ai/interfaces/: crawler.py
src/legal_ai/models/: document.py  schemas.py
src/legal_ai/pipeline/: conversation.py  embedding.py  ingestion.py  processing.py  rag.py  tasks.py
src/legal_ai/pipeline/tasks/: crawl.py
src/legal_ai/repositories/: __init__.py  document.py  source.py  source_store.py  target.py  task.py  task_store.py
src/legal_ai/splitters/: generic_splitter.py  moroccan_bo_splitter.py
src/legal_ai/storage/: database.py  target_store.py
src/legal_ai/utils/: heading_rules.py
src/morocco_legal_ai/: database.py
src/morocco_legal_ai/adapters/: crawler.py
src/morocco_legal_ai/interfaces/: crawler.py
src/morocco_legal_ai/migrations/: init.sql
src/morocco_legal_ai/models/: document.py  enums.py
src/pgvector/: sqlalchemy.pyi
tests/: test_api.py  test_conversation_manager.py  test_crawler.py  test_downloader.py  test_embedding.py  test_ingestion.py  test_moroccan_bo_splitter.py  test_processor.py
