[project]
name = "legal_ai"
version = "0.1.0"
description = "Sovereign RAG pipeline for French legal documents, validated on the Moroccan Official Gazette (Bulletin Officiel)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Moad Ennagi", email = "moad.ennagi@gmail.com" }
]
keywords = ["rag", "llm", "nlp", "legal-tech", "pgvector", "french-nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.4",
    "docling>=2.73.1",
    "fastapi[standard]>=0.135.1",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.0",
    "ollama>=0.6.1",
    "openai>=2.30.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.4.3",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "transformers[torch]>=4.57.6",
    "unstructured[pdf]>=0.21.5",
]

[project.urls]
Homepage = "https://github.com/moadennagi/legal-ai"
Repository = "https://github.com/moadennagi/legal-ai"
Issues = "https://github.com/moadennagi/legal-ai/issues"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

# Enable import sorting (isort rules)
[lint.extend]
select = ["I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.mypy-pgvector.sqlalchemy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
